--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <h3> Welcome <%= currentuser.email %></h3>
+  <h3> Welcome <%= current_user.email %></h3>
 <% else %>
   <div class="jumbotron">
     <h2>Welcome to the Phone Management App!</h2>
