--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">PhotoApp</a>
+        <%= link_to 'PhotoApp', root_path, class: "navbar-brand", id: "logo"  %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if current_user && current_user.payment %>
+              <li><%= link_to "Images", images_path  %></li>
+            <% end %>
           </ul>
           <ul class="nav navbar-right col-md-4">
             <% if current_user %>
